fix text qualities alignment

--- a/src/app/modules/player/components/video-selector/video-selector.component.scss
+++ b/src/app/modules/player/components/video-selector/video-selector.component.scss
@@ -40,6 +40,7 @@
             }
 
             .author-accordion__text {
+                display: contents;
                 margin: 0;
             }
         }
